# MyfareNFCio

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md
nfcio/: CMakeLists.txt
nfcio/include/nfcio/: nfc.h
nfcio/src/: nfc.c
nfcio/tests/: test.cpp
